# InformaticaBasica-22-23

./: .headerfile.h  .tareas.cc  hola.cc  pruebas.cc  vimrc  zcontraseñas.txt
convocatoria-preparacion/: cards.cc  examen.cc  examen.h  hola.cc  makefile  prueba.cc  vf.cc
convocatoria-preparacion/box/: box.cc  box.h  boxs.cc
convocatoria-preparacion/cars/: car.cc  car.h  cars.cc
practicasib/1-Iaas/: hello_world.cc
practicasib/2-Linux/linux-exercises/: ProgrammingJoke.txt  aula.txt
practicasib/3-Vim/: 0apuntes.txt
practicasib/3-Vim/Vim-primeros-pasos/: .08openingJoining.txt.swp  hola
practicasib/3-Vim/practica-3-entregable/: Sancho.txt
practicasib/4-Firstprograms/firstprograms/: 1HolaMC.cc  2hola_adios.cc  3calculadora.cc  4cruz.cc  5anyos.cc  6nombre.cc
practicasib/4-Firstprograms/jutge/: hello_world.cc
practicasib/4-Firstprograms/practica-4-entregable/: diferencias.txt  dni.cc  ejercicio.cc  ejercicio5.cc  hello_world.cc  hello_world2.cc
practicasib/5-Expressions/P15613-temperatures/: P15613-temperatures.cc
practicasib/5-Expressions/P41221-sum-of-integer-numbers/: P41221-sum-of-integer-numbers.cc
practicasib/5-Expressions/P62421-three-words/: P62421-three-words.cc
practicasib/5-Expressions/ejerciciospractica/: arithmetic-operators.cc  desinflado.cc
practicasib/6-Alternatives-and-Iterations/P28754-reversed-number-binary/: P28754-reversed-number-binary.cc  makefile
practicasib/6-Alternatives-and-Iterations/P34279-add-one-second/: P34279-add-one-second.cc
practicasib/6-Alternatives-and-Iterations/P36668-sum-of-squares/: P36668-sum-of-squares.cc  makefile
practicasib/6-Alternatives-and-Iterations/P59539-harmonic-numbers-1/: P59539-harmonic-numbers-1.cc  makefile
practicasib/6-Alternatives-and-Iterations/P90615-maximum-of-three-integer-numbers/: P90615-maximum-of-three-integer-numbers.cc  makefile
practicasib/6-Alternatives-and-Iterations/P96767-polynomial-evaluation/: P96767-polynomial-evaluation.cc
practicasib/6-Alternatives-and-Iterations/P97156-numbers-in-an-interval/: P97156-numbers-in-an-interval.cc  makefile
practicasib/6-Alternatives-and-Iterations/P98960-uppercase-lowercase-letter/: P98960-uppercase-lowercase-letter.cc  makefile
practicasib/7-Iterations/P79817-Powers/: P79817-Powers  P79817-Powers.cc  makefile
practicasib/7-Iterations/P89265-Intervals-2/: Doxyfile  P89265-Intervals-2.cc  makefile
practicasib/7-Iterations/binary-to-decimal/: Doxyfile  binary-to-decimal  binary-to-decimal.cc  makefile
practicasib/7-Iterations/decimal-to-binary/: Doxyfile  decimal-to-binary.cc  makefile
practicasib/7-Iterations/fibonacci-numbers/: Doxyfile  fibonacci-numbers.cc  makefile
practicasib/7-Iterations/leap-years/: Doxyfile  leap-years.cc  makefile
practicasib/7-Iterations/suma-de-digitos/: makefile  suma-de-digitos.cc
practicasib/8-Functions/P34091-perfect-numbers/: P34091-perfect-numbers.cc
practicasib/8-Functions/P55722-iterative-number-digits/: P55722-iterative-number-digits.cc
practicasib/8-Functions/P95972-Sum-Of-Divisors/: P95972-Sum-Of-Divisors.cc
practicasib/8-Functions/change-case/: CMakeLists.txt
practicasib/8-Functions/change-case/src/: change-case-main.cc  change-case-tools.h  change-case-transformation.cc
practicasib/8-Functions/floating-point-arithmetics/: are-equal.cc  floating-point-arithmetics.cc  makefile
practicasib/8-Functions/function-example/: CMakeLists.txt
practicasib/8-Functions/modelo/: Makefile  nuevo.cc
practicasib/8-Functions/random-numbers/: makefile  (+1 more)
practicasib/_12-OOP/: Good-Practices.txt
practicasib/_12-OOP/compute-int/: CMakeLists.txt
practicasib/_12-OOP/compute-int/src/: compute_int_class.cc  compute_int_class.h  compute_int_main.cc  tools.cc  tools.h
practicasib/jutgerepo/: average.cc  calculadora.cc  chess1.cc  comparison-words.cc  counting-as.cc  decompose.cc  desinflado-e-inflado.cc  doublefactorial.cc  factorial.cc  first-cubes.cc  first-numbers.cc  gcd.cc  harmonic-numbers.cc  hexadecimal.cc  integer-division-reminder.cc  intervals1.cc  intervals2.cc  intervals3.cc  iterative-factorial.cc  leap-years.cc  letter-classification.cc  maximum-three-numbers.cc  maximum-two-numbers.cc  movements-ground.cc  multiplication-tables.cc  number_digits.cc  numbers-interval.cc  one-second.cc  palindrome.cc  perfect-numbers.cc  perfect-prime.cc  primality.cc  print-a-cross-2.cc  print-a-cross.cc  print-a-cross2.cc  print-a-line.cc  rational-number.cc  reversed.cc  reversed_with_zeros.cc  rhombus.cc  (+6 more)
(+105 files in other folders)
